--- a/materials.qmd
+++ b/materials.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Materials"
+title: "Data"
 subtitle: Detailed course materials can be found in this section, including exercises to practice. If you are a self-learner, make sure to check the [setup page](setup.qmd).
 ---
 
