--- a/setup.qmd
+++ b/setup.qmd
@@ -1,12 +1,44 @@
 ---
-title: "Data & setup"
+title: "Setup"
 ---
 
 ## Installation
 
 ::: {.panel-tabset group="language"}
-## tidyverse
-## R
+## R (tidyverse)
+
+#### Required software
+
+- [Download R](https://cran.r-project.org/) and install it using default options. (Note: choose the "base" version for Windows)
+- [Download RStudio](https://www.rstudio.com/products/rstudio/download/#download) and install it using default options. 
+
+#### Setting up RStudio
+
+After installing RStudio, change some of its default options (you only need to 
+do this once): 
+
+- From the upper menu go to <kbd>Tools</kbd> > <kbd>Global Options...</kbd> 
+- _Untick_ the option "Restore .RData to workspace on startup."
+- Change "Save workspace to .RData on exit" option to "Never"
+- Press <kbd>OK</kbd>
+
+## R (base)
+
+#### Required software
+
+- [Download R](https://cran.r-project.org/) and install it using default options. (Note: choose the "base" version for Windows)
+- [Download RStudio](https://www.rstudio.com/products/rstudio/download/#download) and install it using default options. 
+
+#### Setting up RStudio
+
+After installing RStudio, change some of its default options (you only need to 
+do this once): 
+
+- From the upper menu go to <kbd>Tools</kbd> > <kbd>Global Options...</kbd> 
+- _Untick_ the option "Restore .RData to workspace on startup."
+- Change "Save workspace to .RData on exit" option to "Never"
+- Press <kbd>OK</kbd>
+
 ## Python
 
 For this course we'll be using [Visual Studio Code](https://code.visualstudio.com). This provides support for various programming languages (including Python and R). It works on Windows, MacOS and Linux. It's also open-source and free.
@@ -28,23 +60,55 @@ A brief sequence of events:
 We will be using the following packages throughout this course:
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
-### tidyverse
+Install the required packages. Run the following code in the console:
 
-The `tidyverse` package is actually a collection of packages that provides functionality for data science. For more information see: [https://www.tidyverse.org](https://www.tidyverse.org).
-
-It can be installed with
 ```{r}
 #| eval: false
 install.packages("tidyverse")
+install.packages("rstatix")
+install.packages("ggResidpanel")
 ```
 
-## R
+
+#### Testing your installation
+On the RStudio panel named "Console" type `library(tidyverse)` and press <kbd>Enter</kbd>
+
+A message similar to this should print:
+
+```
+── Attaching packages ─────────────────────────────────────────────────────────────────── tidyverse 1.2.1 ──
+✔ ggplot2 3.2.1     ✔ purrr   0.3.2
+✔ tibble  2.1.3     ✔ dplyr   0.8.3
+✔ tidyr   1.0.0     ✔ stringr 1.4.0
+✔ readr   1.3.1     ✔ forcats 0.4.0
+── Conflicts ────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+✖ dplyr::filter() masks stats::filter()
+✖ dplyr::lag()    masks stats::lag()
+```
+<p></p>
+
+If instead you get the message: 
+
+```
+Error in library(tidyverse) : there is no package called ‘tidyverse’
+```
+ 
+then your package installation did not work. Please ask the instructors for assistance before the course. 
+
+## R (base)
+
+Install the required packages. Run the following code in the console:
+
+```{r}
+#| eval: false
+install.packages("rstatix")
+```
 
 ## Python
 
-### NumPy
+#### NumPy
 The `numpy` package provides fundamental data science functionality to Python. For more information see: [https://numpy.org/doc/stable/#](https://numpy.org/doc/stable/#)
 
 It can be installed via `pip`
@@ -59,7 +123,7 @@ or `conda`
 conda install -c conda-forge numpy
 ```
 
-### pandas
+#### pandas
 The `pandas` package provides data structures to Python. For more information see: [https://pandas.pydata.org/docs/getting_started/install.html](https://pandas.pydata.org/docs/getting_started/install.html).
 
 It can be installed via `pip`
@@ -74,7 +138,7 @@ or `conda`
 conda install pandas
 ```
 
-### pingouin
+#### pingouin
 The `pingouin` package provides statistical functionality to Python. For more information see: [https://pingouin-stats.org](https://pingouin-stats.org).
 
 It can be installed via `pip`
@@ -90,7 +154,7 @@ or `conda`
 conda install -c conda-forge pingouin
 ```
 
-### patchworklib
+#### patchworklib
 The `patchworklib` package provides an easy way for assembling figures. This package is required to run the course-specific `dgplots()` function. For more information see: [https://pypi.org/project/patchworklib/](https://pypi.org/project/patchworklib/).
 
 It can be installed via `pip`
@@ -99,26 +163,24 @@ It can be installed via `pip`
 pip install patchworklib
 ```
 
-### plotnine
-The `plotnine` packages provides a grammar of graphics to Python - an equivalent to the `ggplot2` package in R. For more information see: [https://plotnine.readthedocs.io/en/stable/#](https://plotnine.readthedocs.io/en/stable/#).
+#### plotnine
 
-::: {.callout-important}
-November 2022: At the moment the `patchworklib` package (which we'll use for creating some plots) does not work with the latest version of `plotnine`. So we need to install version 0.9.0.
-:::
+The `plotnine` packages provides a grammar of graphics to Python - an equivalent to the `ggplot2` package in R. For more information see: [https://plotnine.readthedocs.io/en/stable/#](https://plotnine.readthedocs.io/en/stable/#).
 
 It can be installed via `pip`
 ```{python}
 #| eval: false
-pip install plotnine==0.9.0
+pip install plotnine
 ```
 
 or `conda`
 ```{python}
 #| eval: false
-conda install -c conda-forge plotnine==0.9.0
+conda install -c conda-forge plotnine
 ```
 
 ### scikit-posthocs
+
 The `scikit-posthocs` package provides post-hoc functionality. For more information see: [https://scikit-posthocs.readthedocs.io/en/latest/](https://scikit-posthocs.readthedocs.io/en/latest/)
 
 It can be installed via `pip`
@@ -128,6 +190,7 @@ pip install scikit-posthocs
 ```
 
 ### statsmodels
+
 The `statsmodels` package provides statistical functionality. For more information see: [https://www.statsmodels.org/stable/index.html](https://www.statsmodels.org/stable/index.html).
 
 It can be installed via `pip`
